--- a/templates/sign-up.hbs
+++ b/templates/sign-up.hbs
@@ -39,14 +39,14 @@
         </div>
         <div class="content">
             <p>Dear {{firstName}} {{lastName}},</p>
-            <p>Thank you for choosing Aakash Life! To ensure the security of your account, please use the following Login Credential:</p>
+            <p>Your counsellor access for Tayome has been created.Please log on to <a href="{{link}}" >link</a> with your login credentials:</p>
             
-            <p>email: {{email}}</p>
+            <p>Email: {{email}}</p>
             <p>Password: {{password}}</p>
         </div>
         <div class="signature">
-            <p>Stay secure,</p>
-            <p>Aakash Life </p>
+            <p>Regards,</p>
+            <p>Tayome team</p>
             <!-- Your signature or sender's name can be added here -->
         </div>
     </div>
